--- a/.CaseToSolve/src/apistyle.css
+++ b/.CaseToSolve/src/apistyle.css
@@ -1,18 +1,31 @@
+@keyframes opacity {
+  /* Animacion para el despligable de la API */
+  0% {
+    height: 0;
+    opacity: 5%;
+  }
+
+  100% {
+    height: 550px;
+    opacity: 95%;
+  }
+}
+
 * {
-  border-radius: 3px;
   font-family: "Cinzel", serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  margin: 5px;
 }
 body {
-  background: grey;
+  width: 100%;
+  height: 210vh;
+  background: linear-gradient(to bottom, #abbde8, #4274cc, #141344, #23164c);
 }
 h1 {
-  padding: 30px;
-  font-size: 40px;
   text-align: center;
+  /* Crear titulo chulo */
+  height: 150px;
 }
 
 /* ESTILO CONTENEDOR */
@@ -21,47 +34,68 @@ h1 {
   justify-content: center;
   display: grid;
   grid-template-areas:
-    "section fullApi"
-    "randomPhoto randomData";
-  grid-template-columns: 600px 600px;
-  grid-template-rows: 600px 360px;
-  gap: 100px;
-  width: 90%;
-  padding: 20px;
-  margin: 10px;
+    "section"
+    "fullApi "
+    "randomPhoto "
+    "randomData ";
+  /* Quitar foto y info random de display grid y pasarlo a flex */
+  grid-template-columns: 90%;
+  gap: 50px;
+
+  height: 50vh;
 }
 
 /* ESTILO DIV FULL API */
 /* TIENE ESTILO DADO DESDE JS TAMBIEN */
 
 .box-info {
-  height: 600px;
-  width: 500px;
   padding: 10px;
+  border-radius: 35px 0px 35px 0px;
+  border: 2px solid #0d0d0e;
+  height: 80px;
+  transition: all 1.1s; /* Animacion para el despligable de la API */
 }
 
 .flex {
-  margin: 10px;
+  transition: all 1s;
   justify-items: center;
   display: flex;
+  margin: auto;
+  gap: 10px;
+  padding: 10px;
 
   .wrapper-contenido-info {
+    display: none;
+    min-height: 0;
     grid-area: fullApi;
-    width: 550px;
+    justify-content: center;
+    width: 90%;
+    transition: all 1s;
     justify-self: center;
     padding: 20px;
-    max-height: 600px;
     overflow: hidden;
     position: relative;
+    animation-delay: 1.1s; /* Animacion para el despligable de la API */
+    animation: 1.1s linear opacity; /* Animacion para el despligable de la API */
 
     #contenido-info {
-      transition: all 0.5s;
+      animation: 1.1s linear opacity; /* Animacion para el despligable de la API */
+
+      transition: all 1s;
       position: absolute;
       top: 0;
       left: 0;
       padding: 10px;
 
-      h2 {
+      h2,
+      h3,
+      h4,
+      p {
+        padding: 0 30px 0 30px;
+        color: #3f00ff;
+      }
+
+      /* h2 {
         font-size: 20px;
         color: #e6ddec;
       }
@@ -79,22 +113,27 @@ h1 {
         font-size: 20px;
 
         color: #ebe4f1;
-      }
+      } */
     }
   }
 
   .wrapper-btnArrows {
     margin: inherit;
-    width: 100px;
-    height: 490px;
     justify-content: center;
+    width: auto;
 
     .btnArrows {
-      height: 490px;
-      width: 70px;
+      animation: 1.1s linear opacity;
+      height: 0;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      .btn-up,
+      .btn-down {
+        width: 80px;
+        height: 65px;
+      }
     }
   }
 }
@@ -104,26 +143,25 @@ h1 {
 .wrapper-contenido-random {
   grid-area: randomData;
   color: white;
-  height: 350px;
+
   line-height: 1;
+
   .flex {
     padding-left: 30px;
     margin: 0;
-    height: 360px;
+
     display: flex;
     align-items: center;
     gap: 8px;
 
     #contenido-random {
-      height: 300px;
-      width: 320px;
+      padding: 20px;
+
       display: flex;
       flex-direction: column;
       justify-content: center;
       h3,
       p {
-        padding-left: 10px;
-        margin: 30px;
         font-weight: 700;
       }
     }
@@ -151,26 +189,20 @@ h1 {
 /* ESTILO DIV SELECTOR */
 
 #container .wrapper-contenido-section {
-  background: white;
-  height: 620px;
+  background: #190065;
+  height: 500px;
   grid-area: section;
   display: grid;
-  gap: 20px;
-  grid-template-columns: 250px 300px;
-  grid-template-rows: 200px 150px;
-  grid-template-areas:
-    ". contenido "
-    "spn contenido"
-    "select contenido";
+
+  grid-template-columns: 40% 10% 50%;
+
+  grid-template-areas: "spn select contenido";
 
   #span-selector {
-    background: red;
     grid-area: spn;
-    align-self: flex-end;
   }
   .wrapper-selector {
     text-align: center;
-    background: green;
   }
   #selector {
     grid-area: select;
@@ -180,10 +212,9 @@ h1 {
     }
   }
   #div-selector {
-    background: yellow;
     grid-area: contenido;
     overflow-y: scroll;
-    max-height: 450px;
+    max-height: 500px;
     align-self: flex-end;
   }
 }
@@ -194,8 +225,12 @@ h1 {
 }
 
 .icon-animate > button {
+  border-radius: 35px 0px 35px 0px;
+  -moz-border-radius: 35px 0px 35px 0px;
+  -webkit-border-radius: 35px 0px 35px 0px;
+  border: 2px solid #9b9bce;
   justify-content: center;
-  width: 200px;
+  width: 100%;
   height: 80px;
   margin: 0;
   display: flex;
