--- a/.CaseToSolve/src/apistyle.css
+++ b/.CaseToSolve/src/apistyle.css
@@ -1,4 +1,4 @@
-@keyframes opacity {
+@keyframes dropdown {
   /* Animacion para el despligable de la API */
   0% {
     height: 0;
@@ -11,6 +11,87 @@
   }
 }
 
+@keyframes ddrandomInfo {
+  /* Animacion para el despligable de la API */
+  0% {
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    height: 150px;
+    opacity: 95%;
+  }
+}
+
+@keyframes ddphoto1 {
+  /* Animacion para el despligable de la API */
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    width: 250px;
+    height: 250px;
+    opacity: 95%;
+  }
+}
+
+@keyframes ddphoto2 {
+  /* Animacion para el despligable de la API */
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    width: 230px;
+    height: 230px;
+    opacity: 95%;
+  }
+}
+
+@keyframes ddphoto3 {
+  /* Animacion para el despligable de la API */
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    width: 210px;
+    height: 210px;
+    opacity: 95%;
+  }
+}
+
+@keyframes ddphoto4 {
+  /* Animacion para el despligable de la API */
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    width: 190px;
+    height: 190px;
+    opacity: 95%;
+  }
+}
+@keyframes ddphoto5 {
+  /* Animacion para el despligable de la API */
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 5%;
+  }
+  100% {
+    width: 170px;
+    height: 170px;
+    opacity: 95%;
+  }
+}
+
 * {
   font-family: "Cinzel", serif;
   font-optical-sizing: auto;
@@ -19,8 +100,8 @@
 }
 body {
   width: 100%;
-  height: 210vh;
-  background: linear-gradient(to bottom, #abbde8, #4274cc, #141344, #23164c);
+  height: 250vh;
+  background: linear-gradient(to bottom, #abbde8, #4274cc, #1a195c, #000000);
 }
 h1 {
   text-align: center;
@@ -28,21 +109,54 @@ h1 {
   height: 150px;
 }
 
+/* ESTILO BOTONES Y CONTENEDORES DE BOTONES */
+
+.icon-animate {
+  display: flex;
+  justify-content: center;
+}
+
+.icon-animate > button {
+  border-radius: 35px 0px 35px 0px;
+
+  border: 2px solid #9bcebb;
+  justify-content: center;
+  width: 100%;
+  height: 80px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+.icon-animate button > .gif {
+  display: none;
+  border-radius: 5px;
+}
+.icon-animate:hover button > .gif {
+  display: flex;
+}
+.icon-animate:hover button > .icon {
+  display: none;
+}
+.icon-animate button > .icon {
+  display: flex;
+  color: #0c13d0;
+}
+
 /* ESTILO CONTENEDOR */
 
 #container {
+  margin: auto;
   justify-content: center;
   display: grid;
   grid-template-areas:
-    "section"
-    "fullApi "
     "randomPhoto "
-    "randomData ";
-  /* Quitar foto y info random de display grid y pasarlo a flex */
+    "fullApi "
+    "randomData "
+    "section";
   grid-template-columns: 90%;
   gap: 50px;
-
   height: 50vh;
+  width: 75%;
 }
 
 /* ESTILO DIV FULL API */
@@ -76,10 +190,10 @@ h1 {
     overflow: hidden;
     position: relative;
     animation-delay: 1.1s; /* Animacion para el despligable de la API */
-    animation: 1.1s linear opacity; /* Animacion para el despligable de la API */
+    animation: 1.1s linear dropdown; /* Animacion para el despligable de la API */
 
     #contenido-info {
-      animation: 1.1s linear opacity; /* Animacion para el despligable de la API */
+      animation: 1.1s linear dropdown; /* Animacion para el despligable de la API */
 
       transition: all 1s;
       position: absolute;
@@ -94,26 +208,6 @@ h1 {
         padding: 0 30px 0 30px;
         color: #3f00ff;
       }
-
-      /* h2 {
-        font-size: 20px;
-        color: #e6ddec;
-      }
-      h3 {
-        font-size: 20px;
-
-        color: #b695c0;
-      }
-      h4 {
-        font-size: 20px;
-
-        color: #dcd3e2;
-      }
-      p {
-        font-size: 20px;
-
-        color: #ebe4f1;
-      } */
     }
   }
 
@@ -123,7 +217,7 @@ h1 {
     width: auto;
 
     .btnArrows {
-      animation: 1.1s linear opacity;
+      animation: 1.1s linear dropdown;
       height: 0;
       display: flex;
       flex-direction: column;
@@ -137,34 +231,37 @@ h1 {
     }
   }
 }
+
 /* ESTILO DIV RANDOM API */
 /* TIENE ESTILO DADO DESDE JS TAMBIEN */
 
 .wrapper-contenido-random {
   grid-area: randomData;
-  color: white;
-
   line-height: 1;
+  border-radius: 35px 0px 35px 0px;
+  border: 2px solid #0d0d0e;
+  padding: 10px;
+  transition: all 1.1s;
+}
 
-  .flex {
-    padding-left: 30px;
-    margin: 0;
+.border-boton {
+  border-radius: 35px 0px 35px 0px;
+  border: 2px solid #0d0d0e;
+  padding: 10px;
+}
+#contenido-random {
+  margin: auto;
 
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
 
-    #contenido-random {
-      padding: 20px;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      h3,
-      p {
-        font-weight: 700;
-      }
-    }
+  h3,
+  p {
+    padding: 0 30px 0 30px;
+    color: white;
+    font-weight: 700;
   }
 }
 
@@ -174,35 +271,70 @@ h1 {
 .wrapper-contenido-photo {
   grid-area: randomPhoto;
 
-  .flex {
-    gap: 20px;
-    padding: 20px;
+  #contenido-photo {
+    margin-top: 40px;
     display: flex;
-    align-items: center;
-    height: 300px;
-  }
-  .contenido-photo {
-    height: fit-content;
+    gap: 20px;
+    justify-content: center;
+    width: 100%;
+    transition: all 2s;
+
+    .imgClase1 {
+      border-radius: 35px 0px 35px 0px;
+      animation: 1s linear ddphoto1;
+      width: 250px;
+      height: 250px;
+    }
+    .imgClase2 {
+      border-radius: 35px 0px 35px 0px;
+      animation: 1.2s linear ddphoto2;
+      width: 230px;
+      height: 230px;
+    }
+    .imgClase3 {
+      border-radius: 35px 0px 35px 0px;
+      animation: 1.4s linear ddphoto3;
+      width: 210px;
+      height: 210px;
+    }
+    .imgClase4 {
+      border-radius: 35px 0px 35px 0px;
+      animation: 1.6s linear ddphoto4;
+      width: 190px;
+      height: 190px;
+    }
+    .imgClase5 {
+      border-radius: 35px 0px 35px 0px;
+      animation: 1.8s linear ddphoto5;
+      width: 170px;
+      height: 170px;
+    }
   }
 }
 
 /* ESTILO DIV SELECTOR */
 
 #container .wrapper-contenido-section {
-  background: #190065;
+  border-radius: 35px 0px 35px 0px;
+  border: 2px solid #0d0d0e;
+  padding: 40px;
   height: 500px;
   grid-area: section;
   display: grid;
-
   grid-template-columns: 40% 10% 50%;
-
   grid-template-areas: "spn select contenido";
 
-  #span-selector {
+  #text-selector {
     grid-area: spn;
+    margin: auto;
+    text-align: center;
+    img {
+      width: 350px;
+    }
   }
   .wrapper-selector {
     text-align: center;
+    margin: auto;
   }
   #selector {
     grid-area: select;
@@ -212,40 +344,20 @@ h1 {
     }
   }
   #div-selector {
+    margin: auto;
     grid-area: contenido;
-    overflow-y: scroll;
-    max-height: 500px;
-    align-self: flex-end;
+
+    width: 400px;
   }
 }
 
-.icon-animate {
-  display: flex;
-  justify-content: center;
-}
+/* 
+@media screen and (max-height: 1400px) {
+  #contenido-photo {
+    transition: 0.3s all;
 
-.icon-animate > button {
-  border-radius: 35px 0px 35px 0px;
-  -moz-border-radius: 35px 0px 35px 0px;
-  -webkit-border-radius: 35px 0px 35px 0px;
-  border: 2px solid #9b9bce;
-  justify-content: center;
-  width: 100%;
-  height: 80px;
-  margin: 0;
-  display: flex;
-  align-items: center;
-}
-.icon-animate button > .gif {
-  display: none;
-  border-radius: 5px;
-}
-.icon-animate:hover button > .gif {
-  display: flex;
-}
-.icon-animate:hover button > .icon {
-  display: none;
-}
-.icon-animate button > .icon {
-  display: flex;
-}
+    max-width: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+} */
